Updating talk list

--- a/index.html
+++ b/index.html
@@ -117,13 +117,10 @@
     <div class="title">
         <h2>Upcoming Talks</h2>
         <ul>
-            <li>TALK: <span>Coaching Teams to Modern Test Management</span> at <a href="https://www.linkedin.com/pulse/global-testers-summit-2023-qa-touch/">QA Touch Global Testers Summit</a>, May 15th 2023, Online</li>
-            <li>TALK: <span>Let's Do a Thing and Call It Foo</span> at <a href="https://ncrafts.io/">NewCrafts Conference</a>, May 25-26th 2023, Paris, France</li>
-            <li>TALK: <span>Coaching Teams to Modern Test Management</span> at <a href="https://events.geekle.us/qa23/">Geekle QA Global Summit</a>, May 30th-31st 2023, Online</li>
-            <li>KEYNOTE: <span>Whose Test Is It Anyway?</span> at <a href="https://conference.eurostarsoftwaretesting.com/">EuroSTAR Conference</a>, June 11-16th 2023, Antwerp, Belgium.</li>
-            <li>KEYNOTE: <span>TBD</span> at DevTalks 2023, June 22nd 2023, Bucharest, Romania</li>
-            <li>WORKSHOP: <span>Social Software Testing Approaches</span> at <a href="https://conference.eurostarsoftwaretesting.com/">EuroSTAR Conference</a>, June 11-16th 2023, Antwerp, Belgium.</li>
+            <li>SESSION: <span>Let’s Play Rhetoric for All Things Testing</span> at <a href="https://www.lambdatest.com/testmuconf-2023">TestMu</a>, August 22-24th 2023, Online</li>
             <li>KEYNOTE: <span>Make Your Impact with Testing</span> at <a href="https://hustef.hu">HUSTEF</a>, October 3-5th 2023, Budapest, Hungary.</li>
+            <li></li>
+            <li><i><span>I am retiring from public speaking, focusing on other things. Delivering occasional experiential training but no talks/keynotes.</span></i></li>
         </ul>
     </div>
 </section>
