--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -45,9 +45,9 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="status">NEW</div>
             <div class="talktitle">Whose Test Is It Anyway?</div>
             <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">DevTalks, June 22th 2023, Bucharest, Romania</div>
             <div class="wherewhenwhere">EuroSTAR, June 15th 2023, Antwerp, Belgium</div>
             <div class="talktheme">#ResultGap, #UnitTesting, #ExploratoryTesting, #Improv</div>
             <!--
@@ -429,6 +429,13 @@
         <div class="card2">
             <div class="timecircle">45 min</div>
             <div class="status">NEW</div>
+            <div class="talktitle">Let’s Play Rhetoric for All Things Testing</div>
+            <div class="talktype">SESSION</div>
+            <div class="wherewhenwhere">TestMu, August 22-24th 2023, Online</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
             <div class="talktitle">Coaching Teams to Modern Test Management</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">Testing Conf Chicago, May 4th 2023, Online</div>
