--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -44,11 +44,11 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="talktitle">Whose Test Is It Anyway?</div>
+            <div class="status">NEW</div>
+            <div class="talktitle">Make Your Impact with Testing</div>
             <div class="talktype">KEYNOTE</div>
-            <div class="wherewhenwhere">DevTalks, June 22th 2023, Bucharest, Romania</div>
-            <div class="wherewhenwhere">EuroSTAR, June 15th 2023, Antwerp, Belgium</div>
-            <div class="talktheme">#ResultGap, #UnitTesting, #ExploratoryTesting, #Improv</div>
+            <div class="wherewhenwhere">HUSTEF, October 3-5th 2023, Budapest, Hungary</div>
+            <div class="talktheme">#Impact, #ResultsGap, #Career</div>
             <!--
             <i class="fab fa-slideshare"></i>
             <i class="fas fa-video"></i>
@@ -58,11 +58,11 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="status">NEW</div>
-            <div class="talktitle">Make Your Impact with Testing</div>
+            <div class="talktitle">Whose Test Is It Anyway?</div>
             <div class="talktype">KEYNOTE</div>
-            <div class="wherewhenwhere">HUSTEF, October 3-5th 2023, Budapest, Hungary</div>
-            <div class="talktheme">#Impact, #ResultsGap, #Career</div>
+            <div class="wherewhenwhere">DevTalks, June 22th 2023, Bucharest, Romania</div>
+            <div class="wherewhenwhere">EuroSTAR, June 15th 2023, Antwerp, Belgium</div>
+            <div class="talktheme">#ResultGap, #UnitTesting, #ExploratoryTesting, #Improv</div>
             <!--
             <i class="fab fa-slideshare"></i>
             <i class="fas fa-video"></i>
@@ -428,9 +428,10 @@
         <div class="card2">
             <div class="timecircle">45 min</div>
             <div class="status">NEW</div>
-            <div class="talktitle">Let’s Play Rhetoric for All Things Testing</div>
+            <div class="talktitle">Let's Play Rhetoric for All Things Testing</div>
             <div class="talktype">SESSION</div>
             <div class="wherewhenwhere">TestMu, August 22-24th 2023, Online</div>
+            <div class="talktheme">#PublicSpeaking</div>
         </div>
 
         <div class="card2">
