Update main page

--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@
     <div class="title">
         <h2>Upcoming Talks</h2>
         <ul>
-            <li>SESSION: <span>Let’s Play Rhetoric for All Things Testing</span> at <a href="https://www.lambdatest.com/testmuconf-2023">TestMu</a>, August 22-24th 2023, Online</li>
-            <li>KEYNOTE: <span>Make Your Impact with Testing</span> at <a href="https://hustef.hu">HUSTEF</a>, October 3-5th 2023, Budapest, Hungary.</li>
+            <li>SESSION: <span>Let's Play Rhetoric for All Things Testing</span> at <a href="https://www.lambdatest.com/testmuconf-2023">TestMu</a>, August 22-24th 2023, Online</li>
+            <li>TALK: <span>TBD</span> at Hungarian pre-conference meetup to HUSTEF, October 3-5th 2023, Budapest, Hungary</li>
+            <li>KEYNOTE: <span>Make Your Impact with Testing</span> at <a href="https://hustef.hu">HUSTEF</a>, October 3-5th 2023, Budapest, Hungary</li>
             <li></li>
             <li><i><span>I am retiring from public speaking, focusing on other things. Delivering occasional experiential training but no talks/keynotes.</span></i></li>
         </ul>
