Updated front page on talk numbers

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <img src="./images/maaret.jpg" alt="Maaret Pyhäjärvi">
         <div class="about-text">
             <h2>About Me</h2>
-            <h5>Principal Test Engineer at Vaisala. <br>Teaching/Consulting on the side. <br>Serial volunteer. </h5>
+            <h5>Development Manager at Vaisala. <br>Testing Specialist. <br>Teaching/Consulting on the side. <br>Serial volunteer. </h5>
             <div class="speaking">
-                <h6>Delivered 509 sessions at events in 28 countries</h6>
+                <h6>Delivered 527 sessions at events in 28 countries</h6>
                     <img src="images/flags/4x3/fi.svg" alt="Finland">
                     <img src="images/flags/4x3/se.svg" alt="Sweden">
                     <img src="images/flags/4x3/no.svg" alt="Norway">
