--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -65,6 +65,7 @@
             <div class="wherewhenwhere">DevTalks, June 22th 2023, Bucharest, Romania</div>
             <div class="wherewhenwhere">EuroSTAR, June 15th 2023, Antwerp, Belgium</div>
             <div class="talktheme">#ResultGap, #UnitTesting, #ExploratoryTesting, #Improv</div>
+            <a href="https://speakerdeck.com/maaretp/devtalks-whose-test-is-it-anyway"><i class="fab fa-slideshare"></i></a>
             <!--
             <i class="fab fa-slideshare"></i>
             <i class="fas fa-video"></i>
@@ -78,7 +79,7 @@
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">Customer Event, April 26th 2023, Online</div>
             <div class="talktheme">#AcceptanceTesting, #Motivational</div>
-            <a href="https://speakerdeck.com/maaretp/keynote-acceptance-testing-making-difference-for-production-time><i class="fab fa-slideshare"></i></a>
+            <a href="https://speakerdeck.com/maaretp/keynote-acceptance-testing-making-difference-for-production-time"><i class="fab fa-slideshare"></i></a>
             <!--
             <i class="fab fa-slideshare"></i>
             <i class="fas fa-video"></i>
