--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,24 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        If it's your decision to make, it's design. If it's not, it's a requirement.
+      </h1>
+      <h4>&mdash;Alistair Cockburn</h4>
+    </div>
+  </div>
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
+        Scope does not creep; understanding grows
+      </h1>
+      <h4>&mdash;Jeff Patton</h4>
+    </div>
+  </div>
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         As testers we are often expected to not only do our work but to fix our organization to be able to do so. 
       </h1>
       <h4>&mdash;Anna Baik</h4>
@@ -28,15 +46,6 @@
     <h4>&mdash;Rob Meaney</h4>
   </div>
 </div>
-
-  <div class="blockquote-wrapper">
-    <div class="blockquote">
-      <h1>
-        Writing is the best way to talk without being interrupted.
-       </h1>
-      <h4>&mdash;Jules Renard</h4>
-    </div>
-  </div>
 
 <div class="blockquote-wrapper">
     <div class="blockquote">
