--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <h6>Awards</h6>
                 <img src="images/eurostar-testing-excellence-award.jpg" alt="EuroSTAR Testing Excellence Award 2020">
                 <img src="images/agiletestingdays-miatpp-award.jpg" alt="Agile Testing Days MIATPP Award 2016">
-                <img src="images/tivi-ict-influencers.jpg" alt="ICT 100 influencers list 2019, 2020, 2021 and 2022">
+                <img src="images/tivi-ict-influencers.jpg" alt="ICT 100 influencers list 2019, 2020, 2021, 2022 and 2023">
                 <img src="images/tester-award.jpg" alt="Tester Worth Appreciating 2022 by Ohjelmistotestaus ry">
             </div>
             <div class="books">
@@ -115,11 +115,9 @@
     <div class="title">
         <h2>Upcoming Talks</h2>
         <ul>
-            <li>SESSION: <span>Let's Play Rhetoric for All Things Testing</span> at <a href="https://www.lambdatest.com/testmuconf-2023">TestMu</a>, August 22-24th 2023, Online</li>
-            <li>TALK: <span>TBD</span> at Hungarian pre-conference meetup to HUSTEF, October 3-5th 2023, Budapest, Hungary</li>
-            <li>KEYNOTE: <span>Make Your Impact with Testing</span> at <a href="https://hustef.hu">HUSTEF</a>, October 3-5th 2023, Budapest, Hungary</li>
-            <li></li>
-            <li><i><span>I am retiring from public speaking, focusing on other things. Delivering occasional experiential training but no talks/keynotes.</span></i></li>
+            <li><i><span>Retired from keynotes and talks.</span></i></li>
+            <li>Delivers occasional hands-on experiential trainings.</li>
+            <li>Acts as conference program chair, participates in panels, other stage conversations, and podcasts on request.</li>
         </ul>
     </div>
 </section>
@@ -149,7 +147,7 @@
             <i class="fas fa-microphone"></i>
             <h5>Past Talks</h5>
             <div class="preview">
-                <p>I have spoken in 28 countries, delivering 39 keynotes and 509 talks by end of 2022 in total. </p>
+                <p>I have spoken in 28 countries, delivering 50 keynotes and 527 talks by end of 2023 in total. </p>
                 <p style="text-align:center;">
                     <a class="button" href="./past_talks/index.html">Read more...</a>
                 </p>
@@ -183,7 +181,7 @@
 
 <section class="contact" id="contact">
     <h2>Maaret Pyhäjärvi</h2>
-    <p>I read my emails weekly. For faster response, use Linkedin.</p>
+    <p>I read my emails sporadically. For faster response, use Linkedin.</p>
     <div class="social">
         <a href="mailto:maaret+website@iki.fi"><i class="fas fa-envelope-square"></i></a>
         <a rel="me" href="https://mas.to/@maaretp" target="_blank" rel="noopener noreferrer me" title="Mastodon - international"><i class="fab fa-mastodon"></i></a>
