--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -32,30 +32,30 @@
 <h2 id="keynotes"">Keynotes, Talks, and Panels</h2>
 <p>Keynotes are invited talks that generally speak for the whole conference and cater to widest variety of people in audiences. Talks can be for any audience. Panels are sessions where you prepare questions and perspectives, and try to present it with a group of people following energies of the audience, or at least a second person.</p>
 <p></p>
-<p><span>July 15th, 2023</span>: I am retiring from public speaking, focusing on other things. Delivering occasional experiential training but no talks/keynotes.</p>
+<p><span>July 15th, 2023</span>: I have retired from public speaking, focusing on other things.
+    Delivering occasional hands-on experiential training but no talks/keynotes.</p>
 </div>
 
 <section class="talks">
     <div class="box2">
 
         <div class="card2">
-        <div class="card2text">Speaking in public 2001-2022, Maaret has delivered 527 sessions out of which 50 are keynote sessions.</div>
+        <div class="card2text">Speaking in public 2001-2022, Maaret has delivered 529 sessions out of which 50 are keynote sessions.</div>
             <img src="../images/Talks2023.png" alt="statistics of talks from Maaret">
         <div class="card2text"><i class="fab fa-slideshare"></i> slides, <i class="fas fa-video"></i>video, <i class="far fa-gem"></i>article, <i class="fas fa-bars"></i>abstract available on some of the talks.</div>
         </div>
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="status">NEW</div>
+            <!--<div class="status">NEW</div>-->
             <div class="talktitle">Make Your Impact with Testing</div>
             <div class="talktype">KEYNOTE</div>
             <div class="wherewhenwhere">HUSTEF, October 3-5th 2023, Budapest, Hungary</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">The Shortcut, November 3rd 2023, Helsinki, Finland</div>
+            <a href="https://speakerdeck.com/maaretp/hustef-making-your-impact-with-testing"><i class="fab fa-slideshare"></i></a>
+            <a href="https://www.youtube.com/watch?v=3eO10dn06U4"><i class="fas fa-video"></i></a>
             <div class="talktheme">#Impact, #ResultsGap, #Career</div>
-            <!--
-            <i class="fab fa-slideshare"></i>
-            <i class="fas fa-video"></i>
-            <i class="far fa-gem"></i>
-            -->
         </div>
 
         <div class="card2">
@@ -430,7 +430,14 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
-            <div class="status">NEW</div>
+            <div class="talktitle">Serial Mentor's Lessons for Learning</div>
+            <div class="talktype">SESSION</div>
+            <div class="wherewhenwhere">Teknologia '23 Tivia Stage, November 7th 2023, Helsinki, FInland</div>
+            <div class="talktheme">#Mentoring</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
             <div class="talktitle">Let's Play Rhetoric for All Things Testing</div>
             <div class="talktype">SESSION</div>
             <div class="wherewhenwhere">TestMu, August 22-24th 2023, Online</div>
