Updated talk stats

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <img src="./images/maaret.jpg" alt="Maaret Pyhäjärvi">
         <div class="about-text">
             <h2>About Me</h2>
-            <h5>Development Manager at Vaisala. <br>Testing Specialist. <br>Teaching/Consulting on the side. <br>Serial volunteer. </h5>
+            <h5>Development Manager at Vaisala. <br>Testing Specialist. Polyglot Programmer.<br>Teaching/Consulting on the side. <br>Serial volunteer. </h5>
             <div class="speaking">
-                <h6>Delivered 527 sessions at events in 28 countries</h6>
+                <h6>Delivered 528 sessions at events in 28 countries</h6>
                     <img src="images/flags/4x3/fi.svg" alt="Finland">
                     <img src="images/flags/4x3/se.svg" alt="Sweden">
                     <img src="images/flags/4x3/no.svg" alt="Norway">
@@ -147,7 +147,7 @@
             <i class="fas fa-microphone"></i>
             <h5>Past Talks</h5>
             <div class="preview">
-                <p>I have spoken in 28 countries, delivering 50 keynotes and 527 talks by end of 2023 in total. </p>
+                <p>I have spoken in 28 countries, delivering 50 keynotes and 528 talks by end of 2023. </p>
                 <p style="text-align:center;">
                     <a class="button" href="./past_talks/index.html">Read more...</a>
                 </p>
