--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -40,7 +40,7 @@
     <div class="box2">
 
         <div class="card2">
-        <div class="card2text">Speaking in public 2001-2022, Maaret has delivered 529 sessions out of which 50 are keynote sessions.</div>
+        <div class="card2text">Speaking in public 2001-2023, Maaret has delivered 528 sessions out of which 50 are keynote sessions.</div>
             <img src="../images/Talks2023.png" alt="statistics of talks from Maaret">
         <div class="card2text"><i class="fab fa-slideshare"></i> slides, <i class="fas fa-video"></i>video, <i class="far fa-gem"></i>article, <i class="fas fa-bars"></i>abstract available on some of the talks.</div>
         </div>
@@ -117,9 +117,9 @@
             <div class="wherewhenwhere">Customer Event, January 30th, 2023, Online</div>
             <div class="wherewhenwhere">Supermetrics Tech Meetup, August 17th 2022, Helsinki, Finland</div>
             <a href="https://speakerdeck.com/maaretp/talk-lets-do-a-thing-and-call-it-foo-2023-ed"><i class="fab fa-slideshare"></i></a>
-            <a href="https://www.youtube.com/watch?v=lkJ6bixMrg8&t=2985s"><i class="fas fa-video"></i></a>
+            <a href="https://vimeo.com/842230319?fbclid=IwAR2UvQxNAz3Aw4LkInKXvb4g2j4LUCrOdVhsU6XEOYd82Rmr38diurYR5C8"><i class="fas fa-video"></i></a>
             <a href="https://www.lambdatest.com/blog/lets-do-it-a-thing-and-call-it-foo/"><i class="far fa-gem"></i></a>
-            <div class="talktheme">#ResultGap, #UnitTesting, #ExploratoryTesting</div>
+            <div class="talktheme">#ResultGap, #UnitTesting, #ExploratoryTesting, #GenAI</div>
         </div>
 
         <div class="card2">
