Update talks tally

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -446,6 +446,15 @@
 
         <div class="card2">
             <div class="timecircle">45 min</div>
+            <div class="talktitle">Microblogging in Mastodon (in Finnish)</div>
+            <div class="talktype">SESSION</div>
+            <div class="wherewhenwhere">Tivia IT Insider webinar, February 14th 2023, Online.</div>
+            <div class="talktheme">#SocialMedia</div>
+            <a href="https://speakerdeck.com/maaretp/finnish-mikrobloggaus-mastodonissa"><i class="fab fa-slideshare"></i></a>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
             <div class="talktitle">Coaching Teams to Modern Test Management</div>
             <div class="talktype">TALK</div>
             <div class="wherewhenwhere">Testing Conf Chicago, May 4th 2023, Online</div>
