--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,16 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        Talking can transform minds, which can transform behaviors, which can transform institutions.
+      </h1>
+      <h4>&mdash;Sheryl Sandberg</h4>
+    </div>
+  </div>
+
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         If it's your decision to make, it's design. If it's not, it's a requirement.
       </h1>
       <h4>&mdash;Alistair Cockburn</h4>
