Product owner quote

--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,16 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+       Product Owners are the Test Managers of Agile.
+      </h1>
+      <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
+    </div>
+  </div>
+
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         Talking can transform minds, which can transform behaviors, which can transform institutions.
       </h1>
       <h4>&mdash;Sheryl Sandberg</h4>
