Add Sandi Metz quote

--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,16 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        If lack of a feature will force you out of business today it doesn't matter how much it will cost to deal with the code tomorrow.      </h1>
+      <h4>&mdash;Sandi Metz</h4>
+    </div>
+  </div>
+
+
+  
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
        Product Owners are the Test Managers of Agile.
       </h1>
       <h4>&mdash;Maaret Pyh&auml;j&auml;rvi</h4>
