Another Sandi Metz

--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,16 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        Depend on things that change less often than you do.
+      </h1>
+      <h4>&mdash;Sandi Metz</h4>
+    </div>
+  </div>
+
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         In a small application, poor design is survivable. Even if everything is connected to everything else, if you can hold it all in your head at once, you can still improve the application. The problem with poorly designed small applications is that if they are successful, they grow up to be poorly designed big applications.
       </h1>
       <h4>&mdash;Sandi Metz</h4>
