Add Jessica Gaston quote

--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,15 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        One man's crappy software is another man's full time job.
+      </h1>
+      <h4>&mdash;Jessica Gaston</h4>
+    </div>
+  </div>
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         Depend on things that change less often than you do.
       </h1>
       <h4>&mdash;Sandi Metz</h4>
