Update some achievements

--- a/contents.html
+++ b/contents.html
@@ -48,6 +48,7 @@
         <div class="contents2-title">PODCAST APPEARANCES</div>
       
         <ul>
+          <li>Digital Crime Podcast, 2024</li>
           <li>Liberated Tester Podcast, <a href="https://open.spotify.com/episode/4HBbv0iWmDuBuP0HOfPBMe?si=S3ZPaoXjTEGDV_4ZqoV31A&nd=1">Maaret Pyhäjärvi on The 10x Tester, Maximizing Your Impact, Testing Dozen and Watermelons: LT012 Part 2</a>, March 30th, 2023</li>
           <li>Liberated Tester Podcast, <a href="https://open.spotify.com/episode/77ecY6JsnWHEwRWBgkoVWm?si=Ox5UTN8PQ4yp6k9YuJ2v9w&nd=1">Maaret Pyhäjärvi on the Paradox of Tight Schedules, Pull Systems, Art of Co-Creation and Ensemble Programming, LT011-Part1</a>, March 13th 2023</li>
           <li>Linkedin event, <a href="https://www.youtube.com/watch?v=szcfI69Dt-s">Things to Unlearn with Maaret and Shruti</a>, Feb 3rd 2023</li>
@@ -140,7 +141,8 @@
         <div class="contents2-title">Awards and Nominations</div>
       
       <ul>
-        <li>ICT 100 Most Influential 2019, 2020, 2021, 2022 by Tivi</li>
+        <li>TIVIA70 Award 2023 'Kiitoksena työstä Suomen ICT-yhteisöjen rakentajana, kouluttajana ja avoimuuden edistäjänä'</li>
+        <li>ICT 100 Most Influential 2019, 2020, 2021, 2022, 2023 by Tivi</li>
         <li>Most Influential Agile Testing Professional Person (MIATPP) 2016, awarded by Agile Testing Days</li>
         <li>EuroSTAR Testing Excellence Award 2020</li>
       </ul>
@@ -155,7 +157,7 @@
       <ul>
         <li>2023 Program Committee Member, Selenium Conference (Chicago)</li>
         <li>2020, 2022 Program Committee Member, Selenium Conference India</li>
-        <li>2021, 2022 Program Committee Member, SEETest</li>
+        <li>2021, 2022, 2023 Program Committee Member, SEETest</li>
         <li>2022 Program Committee Member, Geekle QA Conference</li>
         <li>2015-2020 Main Organizer/Conference Designer European Testing Conference  (Bucharest/Romania, Helsinki/Finland, Amsterdam/Netherlands, Valencia/Spain, Amsterdam/Netherlands</li>
         <li>2013-2014 Main Organizer, Tampere Goes Agile (Tampere/Finland)</li>
