--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,15 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        Don't ask forgiveness, radiate intent.
+      </h1>
+      <h4>&mdash;Elizabeth Ayer</h4>
+    </div>
+  </div>
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         One man's crappy software is another man's full time job.
       </h1>
       <h4>&mdash;Jessica Gaston</h4>
