--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,15 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        The people should have the power, not you.
+      </h1>
+      <h4>&mdash;Elizabeth Zagroba</h4>
+    </div>
+  </div>
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         Tester who can't report bugs is like a refridgerator light that is only on when the door is closed.
       </h1>
       <h4>&mdash;Cem Kaner et al - Lessons Learned in Software Testing</h4>
