Add latest article, update speaker rider

--- a/quote.html
+++ b/quote.html
@@ -4,6 +4,16 @@
 </head>
 <body>
 
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
+        Machines take me by a suprise with great frequency.
+      </h1>
+      <h4>&mdash;Alan Turing</h4>
+    </div>
+  </div>
+
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
