Add awards history from student union

--- a/contents.html
+++ b/contents.html
@@ -146,6 +146,9 @@
         <li>ICT 100 Most Influential 2019, 2020, 2021, 2022, 2023 by Tivi</li>
         <li>Most Influential Agile Testing Professional Person (MIATPP) 2016, awarded by Agile Testing Days</li>
         <li>EuroSTAR Testing Excellence Award 2020</li>
+        <li>Pyöreän Tornin Kilta, <a href="https://www.pyoreantorninkilta.fi/arwoisat/">Arwoisa</a> 2004, awarded by Teknillisen Korkeakoulun Ylioppilaskunta</li>
+        <li>TKY Golden Award (<a href="https://tky.polyteekkarimuseo.fi/fi/tky/kunnianosoitukset/kultainen-ansiomerkki/ ">TKY Kultainen Ansiomerkki</a>) 1999, awarded by Teknillisen Korkeakoulun Ylioppilaskunta</li>
+        <li><a href="https://tietokilta.fi/kilta/arvomerkit-ja-kunnianosoitukset/ansiomerkeilla-palkitut/ ">ProTiK</a> 1999, awarded by Tietokilta</li>
       </ul>
 
       <div class="contents2-title">Me on list articles</div>
@@ -174,6 +177,10 @@
         <li>2014->    Ohjelmistotestaus ry (Software Testing Finland) Board of Directors, chairman and founder</li>
         <li>2017      Agile Finland ry, member of the board</li>
         <li>1999-2009 Sytyke Testauksen osaamisyhteis&ouml; (Finnish Association for Software Testing), chairman</li>
+        <li>1997      Teekkarijaosto, I&E-tirehtööri</li>
+        <li>1996      Teekkarispeksi ry, Treasurer, Producer</li>
+        <li>1995      Teekkarijaosto, Lakinlaskijaistirehtööri</li>
+        <li>1995      Tietokilta ry, member of the board</li>
       </ul>
 
       <div class="contents2-title">Me in news</div>
@@ -214,7 +221,7 @@ I share as a practitioner with a wide range of interest in topics:
 
 <div class="contents2-title"> Minimalistic Speaker Rider </div>
 
-June 2023 - June 2024 I was retired from speaking. Since I will become a contractor representative in June, my employment is
+June 2023 - June 2024 I was retired from speaking. Since I will become a contractor representative in June, my change of employment is
 is unretiring me but also in control of all of my speaking / training engagements.<p>
 
 I will limit my speaking, and welcome keynotes and community events, especially when travel is manageable.<p>
