--- a/quote.html
+++ b/quote.html
@@ -8,6 +8,15 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        Context is the cumulative effect of past decisions.
+      </h1>
+      <h4>&mdash;Elisabeth Hendrickson</h4>
+    </div>
+  </div>
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         Machines take me by a suprise with great frequency.
       </h1>
       <h4>&mdash;Alan Turing</h4>
