--- a/quote.html
+++ b/quote.html
@@ -4,6 +4,24 @@
 </head>
 <body>
 
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
+        Exploratory Testing is the craft of learning well while testing software so that noticing important information about the software is inevitable.
+      </h1>
+      <h4>&mdash;Maaret Pyhäjärvi</h4>
+    </div>
+  </div>
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
+        One day or day one. You decide.
+      </h1>
+      <h4>&mdash;unknown</h4>
+    </div>
+  </div>
+
 
   <div class="blockquote-wrapper">
     <div class="blockquote">
