Update upcoming talks

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <img src="./images/maaret.jpg" alt="Maaret Pyhäjärvi">
         <div class="about-text">
             <h2>About Me</h2>
-            <h5>Development Manager at Vaisala. <br>Testing Specialist. Polyglot Programmer.<br>Teaching/Consulting on the side. <br>Serial volunteer. </h5>
+            <h5>Development Manager at Vaisala (-> 31.5). <br>Testing Specialist. Polyglot Programmer.<br>Teaching/Consulting on the side. <br>Serial volunteer. </h5>
             <div class="speaking">
                 <h6>Delivered 529 sessions at events in 28 countries</h6>
                     <img src="images/flags/4x3/fi.svg" alt="Finland">
@@ -115,9 +115,8 @@
     <div class="title">
         <h2>Upcoming Talks</h2>
         <ul>
-            <li><i><span>Retired from keynotes and talks.</span></i></li>
-            <li>Delivers occasional hands-on experiential trainings.</li>
-            <li>Acts as conference program chair, participates in panels, other stage conversations, and podcasts on request.</li>
+            <li><span>June 4th 2024</span> Social Software Testing Approaches at <a href="https://www.meetup.com/zalando-tech-event-helsinki/events/300897602/">Quality Engineering Meetup at Zalando</a>, Helsinki, Finland.   </li>
+            <li>Available to speak on request by choice of employer, CGI. </li>
         </ul>
     </div>
 </section>
