--- a/quote.html
+++ b/quote.html
@@ -7,9 +7,9 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
-        Exploratory Testing is the craft of learning well while testing software so that noticing important information about the software is inevitable.
+        Exploratory testing is the craft of learning well while testing software so that noticing important information about the software is inevitable.
       </h1>
-      <h4>&mdash;Maaret Pyhäjärvi</h4>
+      <h4>&mdash;Maaret Pyh&aumlj&aumlrvi</h4>
     </div>
   </div>
 
