Update front page

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <h2>Upcoming Talks</h2>
         <ul>
             <li><span>June 4th 2024</span> Social Software Testing Approaches at <a href="https://www.meetup.com/zalando-tech-event-helsinki/events/300897602/">Quality Engineering Meetup at Zalando</a>, Helsinki, Finland.   </li>
-            <li>Available to speak on request by choice of employer, CGI. </li>
+            <li><i>Available to speak on request by choice of employer, CGI (June 3rd 2024 ->).</i></li>
         </ul>
     </div>
 </section>
@@ -146,7 +146,7 @@
             <i class="fas fa-microphone"></i>
             <h5>Past Talks</h5>
             <div class="preview">
-                <p>I have spoken in 28 countries, delivering 50 keynotes and 528 talks by end of 2023. </p>
+                <p>I have spoken in 28 countries, delivering 50 keynotes and 529 talks by end of 2023. </p>
                 <p style="text-align:center;">
                     <a class="button" href="./past_talks/index.html">Read more...</a>
                 </p>
