Add talk at Zalando

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -32,8 +32,6 @@
 <h2 id="keynotes"">Keynotes, Talks, and Panels</h2>
 <p>Keynotes are invited talks that generally speak for the whole conference and cater to widest variety of people in audiences. Talks can be for any audience. Panels are sessions where you prepare questions and perspectives, and try to present it with a group of people following energies of the audience, or at least a second person.</p>
 <p></p>
-<p><span>July 15th, 2023</span>: I have retired from public speaking, focusing on other things.
-    Delivering occasional hands-on experiential training but no talks/keynotes.</p>
 </div>
 
 <section class="talks">
@@ -43,6 +41,17 @@
         <div class="card2text">Speaking in public 2001-2023, Maaret has delivered 529 sessions out of which 50 are keynote sessions.</div>
             <img src="../images/Talks2023.png" alt="statistics of talks from Maaret">
         <div class="card2text"><i class="fab fa-slideshare"></i> slides, <i class="fas fa-video"></i>video, <i class="far fa-gem"></i>article, <i class="fas fa-bars"></i>abstract available on some of the talks.</div>
+        </div>
+
+        <div class="card2">
+            <div class="timecircle">45 min</div>
+            <div class="talktitle">Social Software Testing Approaches</div>
+            <div class="talktype">KEYNOTE</div>
+            <div class="wherewhenwhere">Testing United, November 5th & 6th 2020, Online</div>
+            <div class="talktype">TALK</div>
+            <div class="wherewhenwhere">Quality Engineering Meetup at Zalando, June 4th 2024, Helsinki, Finland</div>
+            <a href="https://www.slideshare.net/maaretp/testing-united-social-software-testing-approaches"><i class="fab fa-slideshare"></i></a>
+            <div class="talktheme">#EnsembleTesting, #EnsembleProgramming, #PairTesting, #PairProgramming</div>
         </div>
 
         <div class="card2">
@@ -189,15 +198,6 @@
             <div class="wherewhenwhere">Customer Event, November 10th 2022, Online</div>
             <a href="https://www.slideshare.net/maaretp/axiomsummit-2022-a-practitioners-guide-to-contemporary-exploratory-testing"><i class="fab fa-slideshare"></i></a>
             <div class="talktheme">#ContemporaryExploratoryTesting</div>
-        </div>
-
-        <div class="card2">
-            <div class="timecircle">45 min</div>
-            <div class="talktitle">Social Software Testing Approaches</div>
-            <div class="talktype">KEYNOTE</div>
-            <div class="wherewhenwhere">Testing United, November 5th & 6th 2020, Online</div>
-            <a href="https://www.slideshare.net/maaretp/testing-united-social-software-testing-approaches"><i class="fab fa-slideshare"></i></a>
-            <div class="talktheme">#EnsembleTesting, #EnsembleProgramming, #PairTesting, #PairProgramming</div>
         </div>
 
         <div class="card2">
