--- a/quote.html
+++ b/quote.html
@@ -7,6 +7,16 @@
   <div class="blockquote-wrapper">
     <div class="blockquote">
       <h1>
+        The whole point of higher ed is to give the unremarkable a shot at being remarkable.
+            </h1>
+      <h4>&mdash;Scott Galloway</h4>
+    </div>
+  </div>
+
+
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
         Exploratory testing is the craft of learning well while testing software so that noticing important information about the software is inevitable.
       </h1>
       <h4>&mdash;Maaret Pyh&aumlj&aumlrvi</h4>
