--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:site_name" content="maaretp.com">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://maaret.com/site-image.png">
+    <meta property="og:image" content="./images/site-image.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -25,7 +25,7 @@
     <meta property="twitter:url" content="https://maaretp.com">
     <meta name="twitter:title" content="Maaret Pyhäjärvi">
     <meta name="twitter:description" content="maaretp is a Finnish software / systems testing specialist and this is her page.">
-    <meta name="twitter:image" content="https://maaret.com/site-image.png">
+    <meta name="twitter:image" content="./images/site-image.png">
 
 </head>
 
