Update card info for training page

--- a/past_talks/index.html
+++ b/past_talks/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en-US"></html>
+<html dir="ltr" lang="en-US">
 <head>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <title>maaretp - Maaret Pyhäjärvi</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans">
     <script src="https://kit.fontawesome.com/d13ab97070.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" type="image/jpg" href="../images/favicon.jpg"/>
+
+    <!-- Facebook Meta Tags -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta property="og:title" content="Maaret Pyhäjärvi">
     <meta property="og:url" content="https://maaretp.com/">
-    <meta property="og:description" name="description" content="Collection of different talks Maaret has delivered over the years.">
+    <meta property="og:description" name="description" content="maaretp is a Finnish software / systems testing specialist and this is her page.">
     <meta property="og:site_name" content="maaretp.com">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta name="author" content="Maaret Pyhäjärvi">
-    <link rel="shortcut icon" type="image/jpg" href="../images/favicon.jpg"/>
+    <meta property="og:image" content="https://maaretp.com/site-image.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="maaretp.com">
+    <meta property="twitter:url" content="https://maaretp.com">
+    <meta name="twitter:title" content="Maaret Pyhäjärvi">
+    <meta name="twitter:description" content="maaretp is a Finnish software / systems testing specialist and this is her page.">
+    <meta name="twitter:image" content="https://maaretp.com/site-image.png">
+
 </head>
 
 <body>
