Fix structure of quotes

--- a/quote.html
+++ b/quote.html
@@ -173,6 +173,7 @@
     </div>
   </div>
 
+<div class="blockquote-wrapper">
   <div class="blockquote">
     <h1>
     Product owners work on information in problem space and testers work on information in solution space.     </h1>
