Add empty pages for books and trainings

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <div class="preview">
                 <p>I teach many courses that I am happy to deliver, or tailor for specific needs. I teach hands-on, doing the work.</p>
                 <p style="text-align:center;">
-                    <a class="button" href="contents.html#teach">Read more...</a>
+                    <a class="button" href="./training/index.html">Read more...</a>
                 </p>
             </div>
         </div>
