Add podcast appearances

--- a/contents.html
+++ b/contents.html
@@ -48,7 +48,7 @@
         <div class="contents2-title">PODCAST APPEARANCES</div>
 
         <ul>
-          <li>Semaphore podcast, <a href="https://semaphoreci.com/blog/maaret-pyhajarvi"><Maaret Pyhäjärvi on Testing in the Modern Age</a>, March 12th, 2024</li>
+          <li>Semaphore podcast, <a href="https://semaphoreci.com/blog/maaret-pyhajarvi">Maaret Pyhäjärvi on Testing in the Modern Age</a>, March 12th, 2024</li>
           <li>Digital Crime Podcast, 2024</li>
           <li>Liberated Tester Podcast, <a href="https://open.spotify.com/episode/4HBbv0iWmDuBuP0HOfPBMe?si=S3ZPaoXjTEGDV_4ZqoV31A&nd=1">Maaret Pyhäjärvi on The 10x Tester, Maximizing Your Impact, Testing Dozen and Watermelons: LT012 Part 2</a>, March 30th, 2023</li>
           <li>Liberated Tester Podcast, <a href="https://open.spotify.com/episode/77ecY6JsnWHEwRWBgkoVWm?si=Ox5UTN8PQ4yp6k9YuJ2v9w&nd=1">Maaret Pyhäjärvi on the Paradox of Tight Schedules, Pull Systems, Art of Co-Creation and Ensemble Programming, LT011-Part1</a>, March 13th 2023</li>
