--- a/books_blogs_articles/index.html
+++ b/books_blogs_articles/index.html
@@ -31,6 +31,15 @@
 
 <h1 class="header">Books, Blogs, and Articles</h1>
 
+<section class="dark" id="dark">
+<div class="books">
+    <h6>Books</h6>
+    <a href="http://exploratorytesting.xyz"><img class="books" src="../images/Book-ET.png" alt="Exploratory Testing book"></a>
+    <a href="https://ensembleprogramming.xyz"><img class="books" src="../images/Book-Ensemble.png" alt="Ensemble Programming Guidebook"></a>
+    <a href="http://strongstylepairprogramming.xyz"><img class="books" src="../images/Book-Pairing.png" alt="Strong Style Pair Programming book"></a>
+</div>
+</section>
+
 
 <section class="dark" id="dark">
     <div class="title">
