--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
         <div class="card">
             <i class="fas fa-bars"></i>
-            <h5>Books, Blogs and Articles</h5>
+            <h5>Books, Blogs, Articles, Podcasts</h5>
             <div class="preview">
                 <p>I have a collection of books, blogs, articles and podcasts I have contributed over the years. </p>
                 <p style="text-align:center;">
