--- a/training/index.html
+++ b/training/index.html
@@ -31,6 +31,90 @@
 
 <h1 class="header">Training</h1>
 
+<section class="dark">
+<h2 class="header">Speaking and Teaching</h2>
+
+<<div class="contents2-title">Topics</div>>
+
+I share as a practitioner with a wide range of interest in topics:
+<ul>
+<li class="bullet"> Software Testing - Exploratory Testing and Test Automation</li>
+<li class="bullet"> Tech Ecosystems as Context (experiences ranging from windows applications to cloud and embedded software; product develoment and IT projects)</li>
+<li class="bullet"> Social Software Testing Approaches (ensemble and pair testing)</li>
+<li class="bullet"> Social Software Development Approaches (ensemble and pair programming)</li>
+<li class="bullet"> Teaching and Mentoring Testers and Programmers</li>
+<li class="bullet"> Learning and Experimentation</li>
+<li class="bullet"> Modern Agile </li>
+<li class="bullet"> Developer Productivity, Metrics and Management </li>
+<li class="bullet"> Conference Speaking </li>
+</ul>
+
+<div class="contents2-title"> Minimalistic Speaker Rider </div>
+
+June 2023 - June 2024 I was retired from speaking. Since I will become a contractor representative in June, my change of employment is
+is unretiring me but also in control of all of my speaking / training engagements.<p>
+
+I will limit my speaking, and welcome keynotes and community events, especially when travel is manageable.<p>
+
+I have a few things I need to join an event:
+<ul>
+<li>I don't pay to speak - that means travel and accommodation is not out of my pocket</li>
+<li>Invite me for my expertise. My gender is a plus and I am happy to introduce you to women and non-binary folks in the hundreds.</li>
+<li>Filter the abusive messages from feedback. I don't want to receive hate mail disguised as "feedback" again.</li>
+<li>Consider culture of your event. Many people say they expect a code of conduct, and it's an awareness flag.</li>
+</ul>
+
+I don't participate in calls for proposals and consider invitation necessary. In encourage conference
+organizers to consider all my talks on this site as proposals you can consider,
+and I would be happy to deliver if I can make the schedule work. <p>
+
+<div class="contents2-title"> My Sessions </div>
+
+I teach courses (0.5 days -> 3 days), also split into 2 hour sessions which is
+works great for remote learning. My workshops are single-purpose sessions that
+stand independent and are usually 1.5 - 2 hours. My talks are 30 - 60 minutes.
+
+My free public sessions are posted under <a class="blacktext" href="https://ti.to/exploratory-testing-academy">Exploratory Testing Academy tito</a>.
+
+<div class="contents2-title"> Brochures </div>
+
+<a class="blacktext" href="https://docs.google.com/document/d/1CJBUTPd7MKY95GayHsKJAm5mNLfd7fIfj5kASowOOZk/edit?usp=sharing">Bio</a>
+| <a class="blacktext" href="https://drive.google.com/file/d/1fu7ZyVgJsS3QeOCbMfENDJrbibjNSCsW/view?usp=sharing">Speaker Image</a>
+
+<div class="contents2-title"> Courses </div>
+
+<a href="https://docs.google.com/document/d/1CRlHmNY_aPiZS479a5tP6-Uc-OWeqe6-lN0jwhcFLOQ/edit?usp=sharing">Ensemble Testing (1 day)</a><br>
+<a href="https://docs.google.com/document/d/1PYCADefWRYfqrKdp-hclaQduiGFFtUVGmUSTNtAOIP8/edit?usp=sharing">Exploratory Testing Foundations (1 day)</a> <br>
+<a href="https://docs.google.com/document/d/1QR_H0ERz0sHLouiLLf37yVrZ4fewsrvZMHWKZZVgETw/edit?usp=sharing">Exploratory Testing Work Course (1 day)</a> | Exploratory Testing Work Course (2 days) | <a class="blacktext" href="https://docs.google.com/document/d/1KsJJmikGQZfzY5MoAWJBEu_gsC3HLq4uubrTWsfuoSQ/edit?usp=sharing">Tutkivan Testauksen työkurssi (2 päivää)</a><br>
+<a href="https://docs.google.com/document/d/1sOPvR5yiHkH5zgagKAiM1TpmY94pIMMZl2GpIpQ1fMo/edit?usp=sharing">Exploratory Testing on Computer Interfaces (APIs)</a><br>
+<a href="https://docs.google.com/document/d/18SEGRpCm2fB-lQpIlm7m1l2r96mE1foGypBHh-FBm1M/edit?usp=sharing">Diversifying Test Approaches using Constraints (1 day)</a><br>
+<a href="https://docs.google.com/document/d/1B2mCP7Pm9ffVuJ838Dm85-SyebqkcxDeUgeobkLahhw/edit?usp=sharing">Exploratory Testing Essentials (1/2 day)</a><br>
+Test Automation Sampler (1 day)<br>
+Contemporary Test Management (1 day)<br>
+Exploratory Testing Applied (2 days)<br>
+Software and System Testing Foundations (1 day)<br>
+Test Design (2 days) | <a href="https://docs.google.com/document/d/1ro9yeeIRh0wrchOFOTPLek63WiH8tNbz4Qo7w-pZVVQ/edit?usp=sharing">Testitapausten suunnittelu (2 päivää)</a><br>
+Test Activity Sampler (1 day)<br>
+
+<div class="contents2-title"> Workshops </div>
+
+<a href="https://docs.google.com/document/d/1iI3-rBGKf3NlzH0CqGUsbcJIC-9UWS3e80OrAKhxcm4/edit?usp=sharing">Exploratory Testing with a Constraint: Automation (99 minutes)</a><br>
+<a href="https://docs.google.com/document/d/1zHAIX-m77jBIyr67JKmpsWuIduVtYefsCxPpuWhgnzY/edit?usp=sharing">Exploratory Testing with a Constraint: Unconfirmed issues (99 minutes)</a><br>
+<a href="https://docs.google.com/document/d/1tjiMGzoDd-pfhMp2ZzrI-q4zHYSxvaHc7Wg_2oxeMfo/edit?usp=sharing">Exploratory Testing with a Constraint: Self-Management (99 minutes)</a><br>
+<a href="https://docs.google.com/document/d/1o5QnEit5E-BfEyZptWGoz214an2dR14eCW2Qi64v3fo/edit?usp=sharing">Test a Text Field, Test a Button (99 minutes)</a><br>
+Incremental Test Planning (99 minutes)<br>
+Test Coverages: Code, Requirements, Risks (99 minutes)<br>
+Exploratory Testing an API (99 minutes)<br>
+Mock the Response to Target Testing (99 minutes)<br>
+Ensemble Testing Roleplay (99 minutes)<br>
+<a href="https://docs.google.com/document/d/1pufTLEjpsC-6WX_VH1L5PHK1Utusk4uolc8dR9iZnf8/edit?usp=sharing">Contemporary Exploratory Testing Ask Anyone Anything (99 minutes)</a><br>
+Visual Test Retrospective (99 minutes)<br>
+Test Strategy Visualization (99 minutes)<br>
+Becoming Public Speaker (99 minutes)<br>
+
+</section>
+
+
 
 <section class="contact" id="contact">
     <h2>Maaret Pyhäjärvi</h2>
